etc/iptables/tor_relay_rules.v4
# Generated by iptables-save v1.6.0 on Tue Mar 26 13:23:59 2019
*mangle
:PREROUTING ACCEPT [223774:246380358]
:INPUT ACCEPT [2714:1567062]
:FORWARD ACCEPT [221056:244812604]
:OUTPUT ACCEPT [2107:872820]
:POSTROUTING ACCEPT [223181:245688586]
COMMIT
# Completed on Tue Mar 26 13:23:59 2019
# Generated by iptables-save v1.6.0 on Tue Mar 26 13:23:59 2019
*nat
:PREROUTING ACCEPT [1:257]
:INPUT ACCEPT [88:5903]
:OUTPUT ACCEPT [3:212]
:POSTROUTING ACCEPT [3:212]

-A PREROUTING -i wlan0 -d 172.24.1.0/24 -j RETURN
-A PREROUTING -i wlan0 -p udp -m udp --dport 53 -j REDIRECT --to-ports 5353
-A PREROUTING -i wlan0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j REDIRECT --to-ports 9040
-A PREROUTING -i wlan0 -p tcp -d 10.192.0.0/10 -j REDIRECT --to-port 9040

COMMIT
# Completed on Tue Mar 26 13:23:59 2019
# Generated by iptables-save v1.6.0 on Tue Mar 26 13:23:59 2019
*raw
:PREROUTING ACCEPT [223774:246380358]
:OUTPUT ACCEPT [2107:872820]
COMMIT
# Completed on Tue Mar 26 13:23:59 2019
# Generated by iptables-save v1.6.0 on Tue Mar 26 13:23:59 2019
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1401:747238]
:ICMP - [0:0]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p icmp -m conntrack --ctstate NEW -j ICMP
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A FORWARD -i wwan0 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o wwan0 -j ACCEPT
-A FORWARD -i wwan0 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o wwan0 -j ACCEPT
-A TCP -i wlan0 -p tcp -m tcp --dport 5522 -j ACCEPT
-A TCP -i wlan0 -p tcp -m tcp --dport 53 -j ACCEPT
-A TCP -i eth0 -p tcp -m tcp --dport 5522 -j ACCEPT
-A TCP -i eth0 -p tcp -m tcp --dport 53 -j ACCEPT
-A TCP -i wlan0 -p tcp -m tcp --dport 9040 -j ACCEPT
-A UDP -i wlan0 -p udp -m udp --dport 53 -j ACCEPT
-A UDP -i wlan0 -p udp -m udp --dport 67 -j ACCEPT
-A UDP -i eth0 -p udp -m udp --dport 53 -j ACCEPT
-A UDP -i wlan0 -p udp -m udp --dport 5353 -j ACCEPT
COMMIT
# Completed on Tue Mar 26 13:23:59 2019
